<resources>
    <string name="app_name">WordleHub</string>
    <string name="login_title_beta">WordleHub</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="sign_up">Üye Ol</string>
    <string name="play_offline">Çevrimdışı Oyna</string>
    <string name="password_confirm">Şifre (Tekrar)</string>
    <string name="create_new_account">Yeni Üyelik Oluştur</string>
    <string name="login_if_has_account">Zaten üye misin? O zaman oturum aç.</string>
    <string name="warning_empty_username">Kullanıcı adı boş olamaz.</string>
    <string name="warning_empty_password">Şifre boş olamaz.</string>
    <string name="warning_password_match">Şifreler eşleşmiyor.</string>
    <string name="sign_up_if_dont_have_acc">Hesabın yok mu? Hemen üye ol.</string>
    <string name="play_online">Çevrimiçi oyna</string>
    <string name="play_alone">Çevrimdışı oyna</string>
    <string name="connecting_to_server">Sunucuya bağlanılıyor…</string>
    <string name="select_gamemode">Oyun Modu Seç</string>
    <string name="normal_mode">Normal Mod</string>
    <string name="restricted_letter_mode">Sabit Harfli Mod</string>
    <string name="select_word_length_text">Kelime Uzunluğu Seç</string>
    <string name="guess_4_letter_word">4 Harfli Kelime Bul</string>
    <string name="guess_5_letter_word">5 Harfli Kelime Bul</string>
    <string name="guess_6_letter_word">6 Harfli Kelime Bul</string>
    <string name="guess_7_letter_word">7 Harfli Kelime Bul</string>
    <string name="go_to_gamemode_selector_text">Oyun modu seçimine geri dön.</string>
    <string name="send_request_text">İstek At</string>
    <string name="in_game_text">Oyunda</string>
    <string name="waiting_request_text">İstek Beklemede</string>
    <string name="online_text">Çevrimiçi</string>
    <string name="example_server_address">192.168.0.104</string>
    <string name="example_server_port">65535</string>
    <string name="port_text">Port</string>
    <string name="ip_address_text">IP Adresi</string>
    <string name="players_in_lobby_text">Odasında Bulunan Oyuncular</string>
    <string name="missing_string_table_entry"><![CDATA[<MISSING STRING TABLE ENTRY>]]></string>
    <string name="no_players_yet_text">Burada henüz oyuncu yok.</string>
    <string name="back_to_game_select_text">Oyun Seçimine Dön</string>
    <string name="back_sign"><![CDATA[<]]></string>
    <string name="logout_text">Oturumu Kapat</string>
    <string name="ok_text">Tamam</string>
    <string name="enter_text">Enter</string>
    <string name="letter_cc">Ç</string>
    <string name="letter_oo">Ö</string>
    <string name="letter_m">M</string>
    <string name="letter_n">N</string>
    <string name="letter_b">B</string>
    <string name="letter_v">V</string>
    <string name="letter_c">C</string>
    <string name="letter_z">Z</string>
    <string name="backspace_text">Bckspc</string>
    <string name="letter_ii">İ</string>
    <string name="letter_ss">Ş</string>
    <string name="letter_l">L</string>
    <string name="letter_k">K</string>
    <string name="letter_j">J</string>
    <string name="letter_h">H</string>
    <string name="letter_g">G</string>
    <string name="letter_f">F</string>
    <string name="letter_d">D</string>
    <string name="letter_s">S</string>
    <string name="letter_a">A</string>
    <string name="letter_uu">Ü</string>
    <string name="letter_gg">Ğ</string>
    <string name="letter_p">P</string>
    <string name="letter_o">O</string>
    <string name="letter_i">I</string>
    <string name="letter_u">U</string>
    <string name="letter_y">Y</string>
    <string name="letter_t">T</string>
    <string name="letter_r">R</string>
    <string name="letter_e">E</string>
    <string name="letter_empty"/>
    <string name="enter_word_for_opponent_text">Rakibinizin tahmin etmesi için bir kelime girin</string>
    <string name="verify_text">Onayla</string>
    <string name="waiting_opponent_text">Rakip Bekleniyor…</string>
    <string name="peek_opponent_button_text">Rakibi Dikizle</string>
</resources>