<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity"
        android:padding="50dp"
        android:orientation="vertical"
        android:gravity="center">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title_beta"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/skyBlue"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textAlignment="center"
            android:textSize="20sp"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="50dp"
            android:minHeight="48dp"
            android:id="@+id/loginUsernameInput"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:paddingHorizontal="10sp"
            android:id="@+id/emptyUsernameText"
            android:text="@string/warning_empty_username"
            android:textColor="@color/red"
            android:visibility="gone"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:minHeight="48dp"
            android:id="@+id/loginPasswordInput"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:paddingHorizontal="10sp"
            android:id="@+id/emptyPasswordText"
            android:text="@string/warning_empty_password"
            android:textColor="@color/red"
            android:visibility="gone"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:minHeight="48dp"
            android:id="@+id/loginPasswordConfirmInput"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:paddingHorizontal="10sp"
            android:id="@+id/passwordMatchText"
            android:text="@string/warning_password_match"
            android:textColor="@color/red"
            android:visibility="gone"
    />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up"
            android:id="@+id/signUpButton"
            android:backgroundTint="@color/skyBlue"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/loginText"
            android:text="@string/login_if_has_account"
            android:clickable="true"
            android:focusable="true"
    />
</LinearLayout>