<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:padding="50dp"
        android:orientation="vertical"
        android:gravity="center">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:text="@string/login_title_beta"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/skyBlue"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginBottom="5dp"
            android:minHeight="48dp"
            android:id="@+id/loginUsernameInput"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="50dp"
            android:minHeight="48dp"
            android:id="@+id/loginPasswordInput"
    />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:backgroundTint="@color/skyBlue"
    />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/signUpButton"
            android:backgroundTint="@color/skyBlue"
    />

    <!-- For the future -->
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_offline"
            android:id="@+id/playOfflineButton"
            android:visibility="gone"
            android:backgroundTint="@color/skyBlue"
    />
</LinearLayout>