<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:padding="20dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ip_address_text"
                android:layout_marginEnd="10dp"
        />

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:id="@+id/serverIpInput"
                android:hint="@string/example_server_address"
                android:text="@string/example_server_address"
                android:inputType="text"
                android:importantForAutofill="noExcludeDescendants"
        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/port_text"
                android:layout_marginEnd="10dp"
        />

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:id="@+id/serverPortInput"
                android:hint="@string/example_server_port"
                android:text="@string/example_server_port"
                android:inputType="numberDecimal"
                android:importantForAutofill="noExcludeDescendants"
        />

    </LinearLayout>

</LinearLayout>