<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="50dp"
        android:paddingHorizontal="20dp"
        tools:context=".game.online.LobbyActivity">
<!--
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
    >
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/backToGameSelectButton"
                android:text="@string/back_sign"
                android:backgroundTint="@color/skyBlue"
                android:layout_marginEnd="5dp"
        />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:orientation="vertical"
                android:gravity="center"
        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lobbyNameText"
                    android:text="@string/missing_string_table_entry"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/skyBlue"
            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/players_in_lobby_text"
                    android:textAlignment="center"
                    android:textColor="@color/skyBlue"
            />

        </LinearLayout>

    </LinearLayout>
-->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lobbyNameText"
            android:text="@string/missing_string_table_entry"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/skyBlue"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/players_in_lobby_text"
            android:textAlignment="center"
            android:textColor="@color/skyBlue"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/noPlayerText"
            android:layout_marginVertical="50dp"
            android:textAlignment="center"
            android:text="@string/no_players_yet_text"
            android:visibility="visible"
    />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/playerList"
            android:visibility="gone"
    />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/backToGameSelectButton"
            android:text="@string/back_to_game_select_text"
            android:backgroundTint="@color/skyBlue"
    />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logoutButton"
            android:text="@string/logout_text"
            android:backgroundTint="@color/skyBlue"
    />

</LinearLayout>